feat: added images and its endpoint
